manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: "/tasks"
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
